--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:support-vector-drawable:26.+'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:design:26.0.1'
+    compile 'com.android.support:support-vector-drawable:26.0.1'
     compile 'com.google.firebase:firebase-auth:11.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-database:11.4.0'
     compile 'com.google.android.gms:play-services-vision:11.4.0'
     compile 'com.google.firebase:firebase-storage:11.4.0'
+    compile 'com.firebaseui:firebase-ui-storage:2.4.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
