--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,7 @@
         <activity android:name=".UserPage" />
         <activity android:name=".HomeScreen" />
         <activity android:name=".QRActivity" />
-        <activity
-            android:name=".Instructions"
-            android:label="@string/title_activity_instructions"></activity>
+        <activity android:name=".Instructions"></activity>
     </application>
 
 </manifest>
