Add initial activity for location commenting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".UserPage" />
         <activity android:name=".HomeScreen" />
         <activity android:name=".QRActivity" />
-        <activity android:name=".Instructions"></activity>
+        <activity android:name=".Instructions" />
+        <activity android:name=".LocationComment"></activity>
     </application>
 
 </manifest>
